@@ -178,8 +178,7 @@
 #define is_gargoyle(ptr)	((ptr) == &mons[PM_GARGOYLE] || \
 				 (ptr) == &mons[PM_WINGED_GARGOYLE])
 
-# define touch_disintegrates(ptr) ((ptr) == &mons[PM_DISINTEGRATOR] || \
-				 (ptr) == &mons[PM_ANTI_MATTER_VORTEX])
+# define touch_disintegrates(ptr) ((ptr) == &mons[PM_DISINTEGRATOR])
   
 #define is_mind_flayer(ptr)	((ptr) == &mons[PM_MIND_FLAYER] || \
 				 (ptr) == &mons[PM_MASTER_MIND_FLAYER])
