@@ -1,3 +1,7 @@
+2012-XX-XX  UnNetHack 4.X.X
+	* removed monsters:
+	  - anti-matter vortex
+
 2012-04-01  UnNetHack 4.0.0
 	* Uncursed and blessed scrolls of magic mapping reveal secret doors
 	* Blessed scrolls of magic mapping reveal objects
